# oaichat

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/chatcli/: __init__.py  __main__.py  cli.py  config.py
src/chatcli/commands/: chat.py  conversation.py  model.py  profile.py
src/chatcli/core/: client.py  models.py  streaming.py
src/chatcli/storage/: database.py  export.py
src/clichat/: __init__.py  __main__.py  cli.py  config.py
src/clichat/commands/: chat.py  conversation.py  model.py  profile.py
src/clichat/core/: client.py  models.py
src/clichat/storage/: database.py  export.py
src/oaichat/: __init__.py  __main__.py  cli.py  config.py
src/oaichat/commands/: chat.py  conversation.py  model.py  profile.py
src/oaichat/core/: client.py  models.py
src/oaichat/storage/: database.py  export.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_database.py  test_models.py
