[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oaichat"
version = "0.1.0"
description = "A beautiful CLI for testing OpenAI-compatible chat APIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Fahad Hossain"}
]
keywords = ["cli", "chat", "openai", "llm", "api", "ollama", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer[all]>=0.9.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
oaichat = "oaichat.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/spit-fires/oaichat"
Repository = "https://github.com/spit-fires/oaichat"
